--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -101,7 +101,7 @@ Internet Solutions Corporation.</p>
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/sega-europe-limited/job/oMLBafw2'>SEGA Europe Limited Careers - Business Intelligence Analyst</a></h5> 
+<h5><a href='http://jobs.jobvite.com/sega-europe-limited/job/oMLBafw2'>SEGA Europe Limited Careers - Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">London London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -199,7 +199,7 @@ analyzing and reporting operational and business data from multiple sources.</p>
 <p><span class="badge badge-light">Prague</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/creditkarma/69201b7d-ebd2-4fec-bce4-55acffcb72b0'>Credit Karma - Staff Business Intelligence Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/creditkarma/69201b7d-ebd2-4fec-bce4-55acffcb72b0'>Credit Karma - Staff Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -207,7 +207,7 @@ analyzing and reporting operational and business data from multiple sources.</p>
 <p><span class="badge badge-light">Redwood City, CARedwood City, CA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/omaze/jobs/4367960002'>Job Application for Director, Business Intelligence at Omaze</a></h5> 
+<h5><a href='https://boards.greenhouse.io/omaze/jobs/4367960002'>Job Application for Director, Business Intelligence at Omaze</a></h5> 
 <p><span class="badge badge-light">Los Angeles Los Angeles California</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -215,7 +215,7 @@ analyzing and reporting operational and business data from multiple sources.</p>
 <p><span class="badge badge-light">London, England, United Kingdom London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://verse.workable.com/jobs/1071660/candidates/new'>Jobs: Head of Business Intelligence ... - Verse Technologies Inc</a></h5> 
+<h5><a href='https://verse.workable.com/jobs/1071660/candidates/new'>Jobs: Head of Business Intelligence ... - Verse Technologies Inc</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Head of Business Intelligence & Data Science at Verse 
 Technologies Inc.</p>
@@ -277,7 +277,7 @@ developing and implementing metrics and reporting to improve our business and
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BrainspireSolutions/743999686600280-manager-director-of-business-intelligence'>Brainspire Solutions Manager/Director of Business Intelligence | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BrainspireSolutions/743999686600280-manager-director-of-business-intelligence'>Brainspire Solutions Manager/Director of Business Intelligence | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -297,7 +297,7 @@ developing and implementing metrics and reporting to improve our business and
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999691641639-business-intelligence-analyst'>Adevinta Business Intelligence Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999691641639-business-intelligence-analyst'>Adevinta Business Intelligence Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Budapest</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -361,7 +361,7 @@ Mavenlink?...</p>
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/imperva/job/oX4oafwj'>Imperva Careers - Business Intelligence Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/imperva/job/oX4oafwj'>Imperva Careers - Business Intelligence Engineer</a></h5> 
 <p><span class="badge badge-light">Redwood City California</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -374,11 +374,11 @@ Mavenlink?...</p>
 <p>3 days ago ... ABOUT THE TEAM: Business Science, which encompasses Digital Analytics, is 
 one of the fastest growing fields within MediaCom and focuses on (1) providing?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIA9Vfw6&k=Job&j=oCBv9fwB&__jvst=Employee+Referral&__jvsd=s9meJhwe&__jvsc=Twitter&bid=nlShOKwx'>WP Engine Careers - Business Intelligence, Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIA9Vfw6&k=Job&j=oCBv9fwB&__jvst=Employee+Referral&__jvsd=s9meJhwe&__jvsc=Twitter&bid=nlShOKwx'>WP Engine Careers - Business Intelligence, Developer</a></h5> 
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on:: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/StrategicInsight/743999687263031-associate-business-intelligence-and-strategy-asset-management'>Strategic Insight Associate, Business Intelligence and Strategy - Asset Management | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/StrategicInsight/743999687263031-associate-business-intelligence-and-strategy-asset-management'>Strategic Insight Associate, Business Intelligence and Strategy - Asset Management | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -386,7 +386,7 @@ one of the fastest growing fields within MediaCom and focuses on (1) providing?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://workable.com/j/0DC6BEDC84'>Hostinger - Jobs: Junior Business Intelligence Developer - Apply ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://workable.com/j/0DC6BEDC84'>Hostinger - Jobs: Junior Business Intelligence Developer - Apply ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... As you might already know, Business Intelligence teams analyse business data 
 and can identify the driving forces behind revenue growth. In other words, they?...</p>
@@ -422,7 +422,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Proprioo/743999691944096-business-intelligence-analyst-h-f-'>Proprioo Business intelligence analyst (H/F) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Proprioo/743999691944096-business-intelligence-analyst-h-f-'>Proprioo Business intelligence analyst (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -446,7 +446,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/narrative-science/job/od8xafwM'>Narrative Science Careers - Business Intelligence Support Specialist</a></h5> 
+<h5><a href='https://jobs.jobvite.com/narrative-science/job/od8xafwM'>Narrative Science Careers - Business Intelligence Support Specialist</a></h5> 
 <p><span class="badge badge-light">Chicago Chicago</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
